// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicenseWidget snapshots snapshots: renders as expected with default props 1`] = `
<injectIntl(ShimmedIntlComponent)
  subtitle={
    <div>
      <injectIntl(ShimmedIntlComponent)
        details={{}}
        license="all-rights-reserved"
      />
      <div
        className="x-small mt-2"
      >
        <FormattedMessage
          defaultMessage="This license currently set at the course level"
          description="Helper text for license type when using course license"
          id="authoring.videoeditor.license.courseLevelDescription.helperText"
        />
      </div>
    </div>
  }
  title="License"
>
  <Stack
    gap={4}
  >
    <Fragment>
      <injectIntl(ShimmedIntlComponent)
        level="course"
        license="all-rights-reserved"
      />
      <injectIntl(ShimmedIntlComponent)
        details={{}}
        level="course"
        license="all-rights-reserved"
      />
      <injectIntl(ShimmedIntlComponent)
        details={{}}
        license="all-rights-reserved"
        licenseDescription={
          <FormattedMessage
            defaultMessage="Licenses set at the course level appear at the bottom of courseware pages within your course."
            description="Message explaining where course level licenses are set"
            id="authoring.videoeditor.license.courseLicenseDescription.message"
          />
        }
      />
    </Fragment>
    <Fragment>
      <div
        className="border-primary-100 border-bottom my-2"
      />
      <Button
        className="text-primary-500 font-weight-bold justify-content-start pl-0"
        onClick={[Function]}
        size="sm"
        variant="link"
      >
        <FormattedMessage
          defaultMessage="Add a license for this video"
          description="Label for add license button"
          id="authoring.videoeditor.license.add.label"
        />
      </Button>
    </Fragment>
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;

exports[`LicenseWidget snapshots snapshots: renders as expected with isLibrary true 1`] = `
<injectIntl(ShimmedIntlComponent)
  subtitle={
    <div>
      <injectIntl(ShimmedIntlComponent)
        details={{}}
        license="all-rights-reserved"
      />
      <div
        className="x-small mt-2"
      >
        <FormattedMessage
          defaultMessage="This license currently set at the library level"
          description="Helper text for license type when using library license"
          id="authoring.videoeditor.license.libraryLevelDescription.helperText"
        />
      </div>
    </div>
  }
  title="License"
>
  <Stack
    gap={4}
  >
    <Fragment>
      <injectIntl(ShimmedIntlComponent)
        level="library"
        license="all-rights-reserved"
      />
      <injectIntl(ShimmedIntlComponent)
        details={{}}
        level="library"
        license="all-rights-reserved"
      />
      <injectIntl(ShimmedIntlComponent)
        details={{}}
        license="all-rights-reserved"
        licenseDescription={
          <FormattedMessage
            defaultMessage="Licenses set at the library level appear at the specific library video."
            description="Message explaining where library level licenses are set"
            id="authoring.videoeditor.license.libraryLicenseDescription.message"
          />
        }
      />
    </Fragment>
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;

exports[`LicenseWidget snapshots snapshots: renders as expected with licenseType defined 1`] = `
<injectIntl(ShimmedIntlComponent)
  subtitle={
    <div>
      <injectIntl(ShimmedIntlComponent)
        details={{}}
        license="all-rights-reserved"
      />
      <div
        className="x-small mt-2"
      >
        <FormattedMessage
          defaultMessage="This license is set specifically for this video"
          description="Helper text for license type when choosing for a spcific video"
          id="authoring.videoeditor.license.defaultLevelDescription.helperText"
        />
      </div>
    </div>
  }
  title="License"
>
  <Stack
    gap={4}
  >
    <Fragment>
      <injectIntl(ShimmedIntlComponent)
        level="block"
        license="all-rights-reserved"
      />
      <injectIntl(ShimmedIntlComponent)
        details={{}}
        level="block"
        license="all-rights-reserved"
      />
      <injectIntl(ShimmedIntlComponent)
        details={{}}
        license="all-rights-reserved"
        licenseDescription={
          <FormattedMessage
            defaultMessage="When a video has a different license than the course as a whole, learners see the license at the bottom right of the video player."
            description="Message explaining where video specific licenses are seen by users"
            id="authoring.videoeditor.license.defaultLicenseDescription.message"
          />
        }
      />
    </Fragment>
  </Stack>
</injectIntl(ShimmedIntlComponent)>
`;
